@@ -1,161 +1,161 @@
 package com.brambilla.chamadaqr.Controller;
 
 import com.brambilla.chamadaqr.Entity.Chamada;
-import com.brambilla.chamadaqr.Entity.Turma;
 import com.brambilla.chamadaqr.Service.ChamadaService;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.http.MediaType;
-import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.http.ResponseEntity;
+import org.springframework.test.util.ReflectionTestUtils;
 
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.doNothing;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
-@WebMvcTest(ChamadaController.class)
-public class ChamadaControllerTest {
+class ChamadaControllerTest {
 
-    @Autowired
-    private MockMvc mockMvc;
+    private ChamadaController controller;
+    private ChamadaService service;
 
-    @MockBean
-    private ChamadaService chamadaService;
+    @BeforeEach
+    void setUp() {
+        service = mock(ChamadaService.class);
+        controller = new ChamadaController();
+        ReflectionTestUtils.setField(controller, "chamadaService", service);
+    }
 
-    @Autowired
-    private ObjectMapper objectMapper;
-
-    private Chamada createChamadaMock() {
-        Chamada chamada = new Chamada();
-        chamada.setId(1L);
-        chamada.setCreatedAt(LocalDateTime.now());
-        chamada.setQtdQrs(3L);
-        chamada.setTurma(new Turma());
-        return chamada;
+    private Chamada sampleChamada() {
+        Chamada c = new Chamada();
+        c.setId(42L);
+        c.setCreatedAt(LocalDateTime.of(2025,5,1,10,0));
+        c.setQtdQrs(5L);
+        return c;
     }
 
     @Test
-    @DisplayName("GET /chamadas - retorna todas as chamadas")
-    void getAllChamadas() throws Exception {
-        Chamada chamada = createChamadaMock();
-        Mockito.when(chamadaService.getAllChamadas()).thenReturn(List.of(chamada));
+    @DisplayName("GET /chamadas → 200 + lista completa")
+    void testGetAllChamadas() {
+        Chamada c = sampleChamada();
+        when(service.getAllChamadas()).thenReturn(List.of(c));
 
-        mockMvc.perform(get("/chamadas"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(1L));
+        ResponseEntity<List<Chamada>> resp = controller.getAllChamadas();
+        assertEquals(200, resp.getStatusCodeValue());
+        List<Chamada> body = resp.getBody();
+        assertNotNull(body);
+        assertEquals(1, body.size());
+        assertEquals(42L, body.get(0).getId());
     }
 
     @Test
-    @DisplayName("GET /chamadas/findByTurmaId/{id} - retorna chamadas por turma")
-    void getChamadasByTurmaId() throws Exception {
-        Chamada chamada = createChamadaMock();
-        Mockito.when(chamadaService.findChamadasByTurmaId(1L)).thenReturn(List.of(chamada));
+    @DisplayName("GET /chamadas/findByTurmaId/{id} → 200 + filtragem por turma")
+    void testGetByTurmaId() {
+        Chamada c = sampleChamada();
+        when(service.findChamadasByTurmaId(7L)).thenReturn(List.of(c));
 
-        mockMvc.perform(get("/chamadas/findByTurmaId/1"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(1L));
+        ResponseEntity<?> resp = controller.getChamadaByTurmaId(7L);
+        assertEquals(200, resp.getStatusCodeValue());
+        @SuppressWarnings("unchecked")
+        List<Chamada> list = (List<Chamada>) resp.getBody();
+        assertEquals(1, list.size());
     }
 
     @Test
-    @DisplayName("GET /chamadas/{id} - retorna chamada por id")
-    void getChamadaById() throws Exception {
-        Chamada chamada = createChamadaMock();
-        Mockito.when(chamadaService.getChamadaById(1L)).thenReturn(Optional.of(chamada));
+    @DisplayName("GET /chamadas/{id} → 200 + encontrado")
+    void testGetByIdFound() {
+        Chamada c = sampleChamada();
+        when(service.getChamadaById(42L)).thenReturn(Optional.of(c));
 
-        mockMvc.perform(get("/chamadas/1"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(1L));
+        ResponseEntity<Chamada> resp = controller.getChamadaById(42L);
+        assertEquals(200, resp.getStatusCodeValue());
+        assertEquals(42L, resp.getBody().getId());
     }
 
     @Test
-    @DisplayName("GET /chamadas/{id} - retorna 404 se chamada não encontrada")
-    void getChamadaByIdNotFound() throws Exception {
-        Mockito.when(chamadaService.getChamadaById(999L)).thenReturn(Optional.empty());
+    @DisplayName("GET /chamadas/{id} → 404 quando não encontrado")
+    void testGetByIdNotFound() {
+        when(service.getChamadaById(99L)).thenReturn(Optional.empty());
 
-        mockMvc.perform(get("/chamadas/999"))
-                .andExpect(status().isNotFound());
+        ResponseEntity<Chamada> resp = controller.getChamadaById(99L);
+        assertEquals(404, resp.getStatusCodeValue());
+        assertNull(resp.getBody());
     }
 
     @Test
-    @DisplayName("GET /chamadas/qtd/{qtdQrs} - retorna chamadas por qtdQrs")
-    void getChamadasByQtdQrs() throws Exception {
-        Chamada chamada = createChamadaMock();
-        Mockito.when(chamadaService.getChamadasByQtdQrs(3L)).thenReturn(List.of(chamada));
+    @DisplayName("GET /chamadas/qtd/{qtdQrs} → 200 + lista não vazia")
+    void testGetByQtdQrsFound() {
+        Chamada c = sampleChamada();
+        when(service.getChamadasByQtdQrs(5L)).thenReturn(List.of(c));
 
-        mockMvc.perform(get("/chamadas/qtd/3"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].qtdQrs").value(3L));
+        ResponseEntity<?> resp = controller.getChamadasByQtdQrs(5L);
+        assertEquals(200, resp.getStatusCodeValue());
+        @SuppressWarnings("unchecked")
+        List<Chamada> list = (List<Chamada>) resp.getBody();
+        assertEquals(1, list.size());
     }
 
     @Test
-    @DisplayName("GET /chamadas/qtd/{qtdQrs} - retorna 404 se nenhuma chamada encontrada")
-    void getChamadasByQtdQrsNotFound() throws Exception {
-        Mockito.when(chamadaService.getChamadasByQtdQrs(0L)).thenReturn(Collections.emptyList());
+    @DisplayName("GET /chamadas/qtd/{qtdQrs} → 404 quando lista vazia")
+    void testGetByQtdQrsNotFound() {
+        when(service.getChamadasByQtdQrs(0L)).thenReturn(List.of());
 
-        mockMvc.perform(get("/chamadas/qtd/0"))
-                .andExpect(status().isNotFound())
-                .andExpect(content().string("Nenhuma chamada encontrada."));
+        ResponseEntity<?> resp = controller.getChamadasByQtdQrs(0L);
+        assertEquals(404, resp.getStatusCodeValue());
+        assertEquals("Nenhuma chamada encontrada.", resp.getBody());
     }
 
     @Test
-    @DisplayName("GET /chamadas/last-month - retorna chamadas do último mês")
-    void getChamadasFromLastMonth() throws Exception {
-        Chamada chamada = createChamadaMock();
-        Mockito.when(chamadaService.getChamadasFromLastMonth()).thenReturn(List.of(chamada));
+    @DisplayName("GET /chamadas/last-month → 200 + encontrada")
+    void testGetLastMonthFound() {
+        Chamada c = sampleChamada();
+        when(service.getChamadasFromLastMonth()).thenReturn(List.of(c));
 
-        mockMvc.perform(get("/chamadas/last-month"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(1L));
+        ResponseEntity<?> resp = controller.getChamadasFromLastMonth();
+        assertEquals(200, resp.getStatusCodeValue());
+        @SuppressWarnings("unchecked")
+        List<Chamada> list = (List<Chamada>) resp.getBody();
+        assertEquals(1, list.size());
     }
 
     @Test
-    @DisplayName("GET /chamadas/last-month - retorna 404 se nenhuma chamada encontrada")
-    void getChamadasFromLastMonthEmpty() throws Exception {
-        Mockito.when(chamadaService.getChamadasFromLastMonth()).thenReturn(Collections.emptyList());
+    @DisplayName("GET /chamadas/last-month → 404 quando vazia")
+    void testGetLastMonthNotFound() {
+        when(service.getChamadasFromLastMonth()).thenReturn(List.of());
 
-        mockMvc.perform(get("/chamadas/last-month"))
-                .andExpect(status().isNotFound())
-                .andExpect(content().string("Nenhuma chamada do último mês encontrada."));
+        ResponseEntity<?> resp = controller.getChamadasFromLastMonth();
+        assertEquals(404, resp.getStatusCodeValue());
+        assertEquals("Nenhuma chamada do último mês encontrada.", resp.getBody());
     }
 
     @Test
-    @DisplayName("POST /chamadas/save - cria chamada com sucesso")
-    void createChamadaSuccess() throws Exception {
-        Chamada chamada = createChamadaMock();
-        Mockito.when(chamadaService.saveChamada(any(Chamada.class))).thenReturn(chamada);
+    @DisplayName("POST /chamadas/save → 200 + cria nova chamada")
+    void testCreateChamadaSuccess() {
+        Chamada c = sampleChamada();
+        when(service.saveChamada(c)).thenReturn(c);
 
-        mockMvc.perform(post("/chamadas/save")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(chamada)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(1L));
+        ResponseEntity<?> resp = controller.createChamada(c);
+        assertEquals(200, resp.getStatusCodeValue());
+        assertSame(c, resp.getBody());
     }
 
     @Test
-    @DisplayName("POST /chamadas/save - retorna erro se corpo estiver ausente")
-    void createChamadaInvalid() throws Exception {
-        mockMvc.perform(post("/chamadas/save")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isBadRequest())
-                .andExpect(content().string(org.hamcrest.Matchers.containsString("Required request body is missing")));
+    @DisplayName("POST /chamadas/save → 400 quando body inválido (null)")
+    void testCreateChamadaBadRequest() {
+        ResponseEntity<?> resp = controller.createChamada(null);
+        assertEquals(400, resp.getStatusCodeValue());
+        assertEquals("Os dados da chamada são inválidos.", resp.getBody());
     }
 
     @Test
-    @DisplayName("DELETE /chamadas/{id} - deleta chamada com sucesso")
-    void deleteChamada() throws Exception {
-        doNothing().when(chamadaService).deleteChamada(1L);
+    @DisplayName("DELETE /chamadas/{id} → 204 No Content")
+    void testDeleteChamada() {
+        doNothing().when(service).deleteChamada(42L);
 
-        mockMvc.perform(delete("/chamadas/1"))
-                .andExpect(status().isNoContent());
+        ResponseEntity<Void> resp = controller.deleteChamada(42L);
+        assertEquals(204, resp.getStatusCodeValue());
+        assertNull(resp.getBody());
+        verify(service).deleteChamada(42L);
     }
 }
